# patent-checker

./: README.md  conftest.py  pyproject.toml  requirements.txt  新建 文本文档.gitignore
docs/: README.md  models.md  processors.md  repositories.md
integrated_tests/: test_cli.py
patent-check/: check.py  single_check.py
patent_checker/: assigner.py  checker.py  split_data.py  splitter.py
salary_calculator/: __main__.py  calculator.py
tests/: test_calculator.py
