[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
# name it as your package name
name = "patent-checker"
# semetric versions
version = "0.0.1"
# describe the package within one sentence
description = "专利数据标注管理器"
authors = [{name = "QuantTide Inc.", email = "opensource@quanttide.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = '>=3.10'
dependencies = [
    "dynaconf>=3.2.5",
]
# dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.2.2",
]

[tool.pdm.build]
includes = [
    "patent_checker",
]
